--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">AParking</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="open">Открыть меню</string>
+    <string name="close">Закрыть меню</string>
 </resources>
