--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="free_progress">Свободно:</string>
     <string name="number_unpaid_header">Неоплаченные сессии (%1$d)</string>
     <string name="history">История</string>
+    <string name="unpaid_header">Неоплаченные сессии</string>
+    <string name="clear_history">Очистить историю</string>
 </resources>
